<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/back"
    android:title="@string/back" />
  <item
    android:id="@+id/forward"
    android:title="@string/forward" />
  <item
    android:id="@+id/zooming"
    android:title="@string/zooming"
    android:checkable="true"
    android:checked="true" />
  <item
    android:id="@+id/desktop_mode"
    android:title="@string/desktop_mode"
    android:checkable="true"
    android:checked="false" />
  <item
    android:id="@+id/refresh"
    android:title="@string/refresh" />
  <item
    android:id="@+id/open_in_browser"
    android:title="@string/open_in_browser" />
  <item
    android:id="@+id/exit"
    android:title="@string/exit" />

</menu>
