<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/editor">

        <Preference
            app:icon="@drawable/format_size"
            app:key="pref_font_size"
            app:summary="@string/pref_editor_textsize_summary"
            app:title="@string/pref_editor_textsize" />

        <ListPreference
            app:defaultValue="4"
            app:entries="@array/settings_tab_entries"
            app:entryValues="@array/settings_tab_entries"
            app:icon="@drawable/format_font"
            app:key="pref_editortabsize"
            app:title="@string/pref_editor_tabsize"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="firacode"
            app:entries="@array/settings_font_entries"
            app:entryValues="@array/pref_entry_values_font"
            app:icon="@drawable/format_font"
            app:key="pref_editorfont"
            app:title="@string/pref_editor_font"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/keyboard_tab"
            app:key="pref_usespaces"
            app:title="@string/pref_editor_use_spaces"
            app:summary="@string/pref_editor_use_spaces_summary" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/form_textbox_password"
            app:key="pref_deleteemptylinefast"
            app:title="@string/pref_editor_deleteemptylinefast"
            app:summary="@string/pref_editor_deleteemptylinefast_summary" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_save"
            app:key="pref_auto_save"
            app:title="@string/pref_editor_auto_save"
            app:summary="@string/pref_editor_auto_save_summary" />
    </PreferenceCategory>

</PreferenceScreen>
