<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/codification">

        <Preference
            app:icon="@drawable/ic_file_code_outline"
            app:key="pref_encoding_for_opening"
            app:title="@string/pref_encoding_for_opening"
            app:summary="@string/pref_encoding_for_opening_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/file_manager">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_file_hidden"
            app:key="pref_show_hidden_files"
            app:title="@string/pref_show_hidden_files"
            app:summary="@string/pref_show_hidden_files_summary" />

    </PreferenceCategory>

</PreferenceScreen>
