<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/aparence">

    <Preference
      app:icon="@drawable/theme_light_dark"
      app:key="pref_theme"
      app:title="@string/title_theme"
      app:summary="@string/pref_theme_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:icon="@drawable/palette"
      app:key="pref_dynamiccolors"
      app:title="@string/pref_materialyou"
      app:summary="@string/pref_materialyou_summary" />
    
    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:key="pref_usewindows"
      app:title="Use windows"
      app:summary="experimental" />
  </PreferenceCategory>

</PreferenceScreen>
