<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:startDestination="@id/fragmentSettings">
    <fragment
        android:id="@+id/fragmentSettings"
        android:name="com.raredev.vcspace.fragments.SettingsFragment"
        android:label="@string/menu_settings">
        <action
            android:id="@+id/action_go_to_general_settings"
            app:destination="@id/fragmentGeneralSettings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_go_to_editor_settings"
            app:destination="@id/fragmentEditorSettings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_go_to_file_settings"
            app:destination="@id/fragmentFileSettings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_go_to_git_settings"
            app:destination="@id/fragmentGitSettings"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/fragmentGeneralSettings"
        android:name="com.raredev.vcspace.fragments.settings.GeneralSettingsFragment"
        android:label="@string/general" />
    <fragment
        android:id="@+id/fragmentEditorSettings"
        android:name="com.raredev.vcspace.fragments.settings.EditorSettingsFragment"
        android:label="@string/editor" />
    <fragment
        android:id="@+id/fragmentFileSettings"
        android:name="com.raredev.vcspace.fragments.settings.FileSettingsFragment"
        android:label="@string/file" />
    <fragment
        android:id="@+id/fragmentGitSettings"
        android:name="com.raredev.vcspace.fragments.settings.GitSettingsFragment"
        android:label="@string/git" />
</navigation>
