<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <com.google.android.material.button.MaterialButton
        android:layout_height="56dp"
        android:layout_width="wrap_content"
        android:elevation="0dp"
        android:ellipsize="end"
        app:iconTint="?attr/colorOnBackground"
        android:singleLine="true"
        android:textColor="?attr/colorOnBackground"
        app:iconPadding="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        app:icon="@drawable/ic_file_add"
        android:textAlignment="textStart"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:text="@string/menu_new_file"
        android:id="@+id/new_file"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:layout_height="56dp"
        android:layout_width="wrap_content"
        android:elevation="0dp"
        android:ellipsize="end"
        app:iconTint="?attr/colorOnBackground"
        android:singleLine="true"
        android:textColor="?attr/colorOnBackground"
        app:iconPadding="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:icon="@drawable/ic_file"
        android:textAlignment="textStart"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:text="@string/menu_open_file"
        android:id="@+id/open_file"
        android:textStyle="bold" />

</LinearLayout>