<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingEnd="20dp"
        android:hint="@string/username_hint"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintAnimationEnabled="true"
        android:paddingTop="10dp"
        android:id="@+id/tvInputLayout_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:singleLine="true"
            android:id="@+id/et_input_username" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:paddingEnd="20dp"
        android:hint="@string/password_hint"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:hintAnimationEnabled="true"
        android:paddingTop="10dp"
        android:id="@+id/tvInputLayout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:id="@+id/et_input_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingStart="20dp"
        android:text="@string/create_token_message"
        android:paddingTop="10dp"
        android:id="@+id/helper" />

</LinearLayout>