<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  android:orientation="vertical">

  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="6dp"
    android:orientation="vertical">

    <TextView
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:textSize="16sp"
      android:text="@string/git"
      android:textStyle="bold" />

  </LinearLayout>

  <com.google.android.material.divider.MaterialDivider
    android:layout_height="1px"
    android:layout_width="match_parent"
    android:alpha="0.5" />

  <RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@drawable/ripple_effect"
    android:padding="8dp"
    android:id="@+id/expand_collapse">

    <ImageView
      android:layout_height="20dp"
      android:layout_width="20dp"
      android:src="@drawable/chevron_down"
      android:layout_centerVertical="true"
      android:id="@+id/down_button" />

    <TextView
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_centerVertical="true"
      android:layout_margin="5dp"
      android:padding="2dp"
      android:layout_toRightOf="@id/down_button"
      android:textSize="14sp"
      android:text="@string/git_tools"
      android:id="@+id/repository_name" />

  </RelativeLayout>

  <RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/expandable_layout">

    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:gravity="center_horizontal"
      android:padding="8dp"
      android:orientation="vertical"
      android:id="@+id/container_tools">

      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="17sp"
        android:paddingBottom="5dp"
        android:text="@string/no_open_repository" />

      <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/clone_repo"
        android:id="@+id/clone_repo" />

      <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="?attr/materialButtonOutlinedStyle"
        android:text="@string/clone_to_path"
        android:visibility="gone"
        android:id="@+id/clone_to_path" />

    </LinearLayout>

    <RelativeLayout
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
      android:layout_below="@id/container_tools"
      android:id="@+id/container_repository">

      <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <HorizontalScrollView
          android:layout_height="wrap_content"
          android:layout_width="wrap_content">

          <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:id="@+id/modifications" />

        </HorizontalScrollView>

      </ScrollView>

    </RelativeLayout>

  </RelativeLayout>

</LinearLayout>
